@@ -1,7 +1,8 @@
 Version 2.01.10 - 
 ================================
+  Allow offline extension of snapshot volumes.
   Move from 2-step to 3-step on-disk metadata commit.
-  Scan ramdisks too.
+  Scan ramdisks too and allow non-O_DIRECT fallback.
   Annotate, tidy and extend list.h.
   Alignment tidying.
 
